@@ -68,8 +68,7 @@ salsa20_set_key(struct salsa20_ctx *ctx,
 		unsigned length, const uint8_t *key);
 
 void
-salsa20_set_iv(struct salsa20_ctx *ctx,
-	       unsigned length, const uint8_t *iv);
+salsa20_set_iv(struct salsa20_ctx *ctx, const uint8_t *iv);
 
 void
 salsa20_crypt(struct salsa20_ctx *ctx,
